--- a/Snacktacular/Info.plist
+++ b/Snacktacular/Info.plist
@@ -79,7 +79,9 @@
 	<false/>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>This app will need the device location in order to determine the distance from a spot to the device, and to plot the user&apos;s location on a map.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app will need the device location in order to determine the distance from a spot to the device, and to plot the user&apos;s location on a map.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app will neeed access to your camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app wil need access to your photo library</string>
 </dict>
 </plist>
